[package]
name = "nomos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4.38", features = ["serde"]}
tempfile = "3.13.0"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_json = "1.0.132"
uuid = { feature = "1.11.0", features = ["v4"] }
schemars = "0.8.21"

[lib]
name = "nomos_rust"
path = "src/lib.rs"
