[package]
name = "nomos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4.38", features = ["serde"]}
tempfile = "3.13.0"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_json = "1.0.132"
schemars = "0.8.21"
tower-http = { version ="0.6.1", features = ["cors"] }
askama = "0.12.1"
once_cell = "1.20.2"
hmac-sha256 = "1.1.7"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"

[lib]
name = "nomos_rust"
path = "src/lib.rs"
